deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: php-todo-app
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
  type: ClusterIP
  selector:
    app: php-todo-app
